fix dropdown menu alignment

--- a/web/alicorn/css/main.201910.css
+++ b/web/alicorn/css/main.201910.css
@@ -6252,6 +6252,9 @@ a[aria-expanded="true"] + ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   background: #39383a;
 }
 
