--- a/web/alicorn/src/scss/components/_responsive.scss
+++ b/web/alicorn/src/scss/components/_responsive.scss
@@ -143,6 +143,7 @@ a[aria-expanded="true"] {
 
     display: flex !important;
     flex-direction: column;
+    align-items: flex-start;
     // align-items: normal;
     // justify-content: normal;
 
